--- a/main.tex
+++ b/main.tex
@@ -446,7 +446,13 @@ titlepage,numbers=noenddot,%1headlines,
 
 \AtBeginDocument{\renewcommand{\thepart}{\Roman{part}}}
 
+
+% ************************************
+% only compile a part of the document
+% ************************************
 % \includeonly{ch/2-related-work}
+
+
 % ********************************************************************
 % GO!GO!GO! MOVE IT!
 %*******************************************************
